@@ -8,6 +8,7 @@ Version 1.5.4+svn:
    * Auto update transitions option is stored in the preferences
    * Removed map flipping
    * Added clipboard flipping
+   * Command line: added "--load FILE" support to "-e"
  * Graphics:
    * New or updated unit frames: Walking Corpse swimmer, Soulless swimmer
  * Language and i18n:
